# AiCommHub

./: LICENSE  README.md  app.py  bot.py  models.py  pyproject.toml
routes/: notifications.py
services/: firebase_service.py  openai_service.py  sendgrid_service.py  twilio_service.py
static/js/: auth.js  dashboard.js
templates/: dashboard.html  index.html
