[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "firebase-admin>=6.6.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "oauthlib>=3.2.2",
    "openai>=1.65.2",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot>=21.11.1",
    "sendgrid>=6.11.0",
    "telegram>=0.0.1",
    "twilio>=9.4.6",
]
